Refactored to use internal packages

--- a/html-source/make-reservation.html
+++ b/html-source/make-reservation.html
@@ -61,7 +61,7 @@
         <div class="row">
             <div class="col">
             
-                <h1>Mke reservation</h1>
+                <h1>Make reservation</h1>
 
                 <form method="post" action="" class="needs-validation" novalidate>
                 
